Change Log for UML::Class::Simple

=version 0.19 (January 26, 2013)
* upgraded the bundled Module::Install to its latest 1.06 release.
* updated docs for the new code repository on GitHub.
* updated the English name of the 1st author.

=version 0.18 (May 20, 2008)
* applied another patch from Dave Howorth for the Class::Accessor::Grouped support.
* updated the bundled Module::Install module to the best one on CPAN, i.e., the version 0.88.

=version 0.17 (Oct 27, 2008)
* applied the patch from Dave Howorth for the Class::Accessor::Grouped support.
* added some tests for it.

=version 0.16 (Sep 13, 2008)
* throws an exception when the dot program complaints and returns non-zero status (this fixed RT #39179).
* added a hint to t/basic.t that the invalid argument warning can be safely ignored.

=version 0.15 (Aug 31, 2008)
* added support for the best practice feature of Class::Accessor and applied Thomas Erskine++'s patch for its tests.
* applied a modified version of Thomas Erskine++'s patch for the new --dot option and better diagnostic messages when the dot prog cannot be found.

=version 0.14 (Aug 28, 2008)
* applied the patch to umlclass.pl from Thomas Erskine:
** the -I option now augments @INC
** the -M option now preloads the modules eagerly.

=version 0.12 (Jul 30, 2008)
* applied the patch from Adam Lounds for intelligently recognize accessors created by Class::Accessor and Class::Accessor::Fast as "class properties" rather than "class methods" in the UML structure.

=version 0.11 (Jun 22, 2008)
* added the  --without-inherited-methods command-line option to umlclass.pl.
* added the inherited_methods property added to UML::Class::Simple.
  It allows the user to filter out all methods, that imported of inherited
  from other classes.
* fixed test failures in perl 5.10.x

=version 0.10 (Jun 20, 2008)
* initial XMI export support added.
* Added dependency XML::LibXML.

= version 0.09 (Apr 10, 2007)