@@ -1,0 +1,6 @@
+package Moouseish::Bar;
+use Moose;
+with 'Moouseish::Foo';
+__PACKAGE__->meta->make_immutable;
+1;
+__END__
