@@ -1,0 +1,4 @@
+package Moouseish::Quux;
+use Moose::Role;
+1;
+__END__
